# spuk

./: .gitignore  LICENSE.md  README.md  api.py  api_main.py  build.sh  config.py  config.toml  dev.sh  dev_server.py  develop.sh  main.py  main.sh  pyproject.toml  requirements.txt  server.py
app/: html_page.py
data/: data.ttl  demo_graph.ttl
doc/: about.md  guide.md
docs/: .reload  1500-1599.html  32-expression-creation.html  32-expression.html  32-item-curation.html  32-item-identifier-01.html  32-item-identifier-02.html  32-item-identifier-03.html  32-item.html  32-manifestation-license.html  32-manifestation.html  32-work-title-01.html  32-work-title-02.html  32-work.html  Alice.html  Bob.html  EvilCorp.html  _w3id.org_digital_damaged_ceramics_acr_amhedabad_pottery_factory_1.html  _w3id.org_digital_damaged_ceramics_acr_chini_manufacture_1.html  _w3id.org_digital_damaged_ceramics_acr_estremoz_factory_1.html  _w3id.org_digital_damaged_ceramics_acr_factories_of_clermonc_in_auvergne_1.html  _w3id.org_digital_damaged_ceramics_acr_ginnori_manufacture_1.html  _w3id.org_digital_damaged_ceramics_acr_helsingfor_manufacture_1.html  _w3id.org_digital_damaged_ceramics_acr_japanese_manufacture_1.html  _w3id.org_digital_damaged_ceramics_acr_manifacture_in_jingdezhen_1.html  _w3id.org_digital_damaged_ceramics_acr_manufacture_et_musee_nationaux_1.html  _w3id.org_digital_damaged_ceramics_acr_manufacture_in_hohr_grenzhausen_1.html  _w3id.org_digital_damaged_ceramics_acr_mic_museo_internazionale_della_ceramica_in_faenza_1.html  _w3id.org_digital_damaged_ceramics_acr_sevres_1.html  (+18004 more)
(+133948 files in other folders)
